--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link href="\asset\css\style.css" rel="stylesheet">
+    <link href="asset\css\style.css" rel="stylesheet">
 </head>
 <body style="background: linear-gradient(to bottom, #3ca55c, #9b9559);">
     <div class="bg-image">
