--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login Form</title>
-        <link href="/asset/css/homepage.css" rel="stylesheet">
+        <link href="homepage.css" rel="stylesheet">
     </head>
     <body>
      <div class="navbar">
