--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link href="asset/css/style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body style="background: linear-gradient(to bottom, #3ca55c, #9b9559);">
     <div class="bg-image">
@@ -81,5 +81,6 @@
             }
         };
     </script>
+    <script src="https://kit.fontawesome.com/564967ff08.js" crossorigin="anonymous"></script>
 </body>
 </html>
