--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body style="background: linear-gradient(to bottom, #3ca55c, #9b9559);">
-    <div class="bg-image">
+    <div class="bg-image" style="background-image: url(oc.png);">
         <div class="login-container">
             <div class="login-header">Parking System</div>
             <i class="fa-regular fa-circle-user fa-8x"></i>
